# utc_code

./: .gitignore  0.chianhom.cpp  0.demcobaonhieuphantutrongdayvakiemtraday.cpp  0.doansocotongbangnhau.cpp  0.ghepdoi  0.luffyvauocso  0.luffyvauocso.cpp  0.nutxanhdo.cpp  0.sd.pie.cpp  0.sm.balancedcoursesassignment.cpp  0.toadocua1diem.cpp  0.toantu.cpp  5.lineinarray.cpp  5.trochoimoi.cpp  README.md  adn.cpp  almostfibonacci.cpp  baitoandoitien.cpp  bantre.cpp  banve.cpp  bieuthuctongdacbiet.cpp  bobatongchan.cpp  boctrung.cpp  boisodacbiet.cpp  buocnhaykangaroo.cpp  buonduale.cpp  butchicungmau.cpp  canbangmang.cpp  canhcuathanki.cpp  capxanhau.cpp  cathinhvuongitnhat.cpp  catthanhkimloai.cpp  caudocuasimon.cpp  cayatmtratien.cpp  caygiapha.cpp  caytretramdot.cpp  chanbo.cpp  chaodonsinhvienk59.cpp  chatcayxaynha.cpp  chiadoidoancon.cpp  (+115 more)
.history/Cpp/: almostfibonacci_20231125195647.cpp  almostfibonacci_20231125195655.cpp  echnhay_20231125200013.cpp  echnhay_20231125200015.cpp  echnhay_20231125200021.cpp  lailatrinhtham_20231125194546.cpp  lailatrinhtham_20231125194552.cpp  lailatrinhtham_20231125194557.cpp  lailatrinhtham_20231125194608.cpp  lailatrinhtham_20231125194626.cpp  lailatrinhtham_20231125194628.cpp  lailatrinhtham_20231125194634.cpp
.history/Python/: bieuthuctinhtoantrenday_20231125200343.py  lailabachusotancungcualuythua_20231125200523.py  lailabachusotancungcualuythua_20231125200535.py
C/: .gitignore  0.t2r2.thuthachcuabino.c  0.tangdanso.c  5.conlai2.c  SC.planningtrees.c  bacthangsohoc.c  baipokemon.c  baitoantrendayso.c  canbi.c  caychiadoi.c  chiemlanhtho.c  cuckho.c  danhbai3cay.c  datcohieu.c  demsonghichthecuaphepthe.c  demsouoccuangiaithua.c  demtrendayso.c  dientichduoi.c  ditrenduongcheo.c  gapgiayngangdoc.c  giaohang.c  giatrixorlonnhat.c  grenais.c  hotenthanhtenho.c  keoxanhkeodo.c  khuyenmai.c  kiemtrasoarmstrong.c  lailalatcacmatcuadongxu.c  latbangvuong.c  luythua.c  nqsonchianhom.c  nqsonxaobai3.c  phantudangtruocnhonhat.c  phepbiendoicapdoilienke.c  quyluatbangso.c  robotlanson(robotquetvoiversion3).c  sinhcacdaungoacsai.c  sodacbiet.c  spamtinnhan.c  superthieuthan.c  (+21 more)
C&Cpp/: .gitignore  0.luffyvauocso.cpp  CMakeLists.txt
C&Cpp/C/: .gitignore  CMakeLists.txt  baitoantrendayso.c  bienkiemsoat.c  chiemlanhtho.c  chuongtrinhgiaitri.c  danhbai3cay.c  datcohieu.c  demsouoccuangiaithua.c  dinhlypasch.c  ditrenduongcheo.c  doiquanvodich.c  duongdingannhat-thuattoanfloyd.c  gapgiayngangdoc.c  giaohang.c  giatrixorlonnhat.c  grenais.c  hephuongtrinh.c  khuyenmai.c  latbangvuong.c  luythua.c  main.c  nqsonchianhom.c  nqsondanhbai3.c  phepbiendoicapdoilienke.c  quyluatbangso.c  robotlanson(robotquetvoiversion3).c  sieusomu.c  tachso.c  tanghoacrush.c  thuthach.c  timx.c  tinhgandungtichphan.c  tongtatcacacuoclelonnhat.c  top3.c  uocsophongthuy.c  vietlot.c  vuontoimattrang.c
C&Cpp/Cpp/: .editorconfig  .gitignore  0.boisocua13.cpp  0.demcobaonhieuphantutrongdayvakiemtraday.cpp  0.doansocotongbangnhau.cpp  0.ghepdoi.cpp  0.luffythamban.cpp  0.sd.pie.cpp  0.sohoanhao.cpp  0.superthieuthan.cpp  0.timhinhchunhatcodientichlonnhi.cpp  0.toadocua1diem.cpp  0.tuoitrongngay,cpp  5.chiateam.cpp  TuAnhswonderfulnumbers.cpp  almostfibonacci.cpp  baitoancaitui.cpp  bamso.cpp  bantre.cpp  banve.cpp  bieuthuchautoBaLan.cpp  bitmatbatde.cpp  bobacapsonhan.cpp  bobapytago.cpp  bobatongchan.cpp  boctrung.cpp  boisodacbiet.cpp  buocnhaykangaroo.cpp  buonduale.cpp  cacdinhnui.cpp  canhcuathanki.cpp  capsohuutithanthiet.cpp  capxanhau.cpp  catthanhkimloai.cpp  cayphandoan(segmenttree).cpp  chanbo.cpp  chanvoile.cpp  chaodonsinhvienk59.cpp  choida3.cpp  chucmungnammoi.cpp  (+158 more)
Cpp/: .editorconfig  .gitignore  0.boisocua13.cpp  0.demcobaonhieuphantutrongdayvakiemtraday.cpp  0.doansocotongbangnhau.cpp  0.ghepdoi.cpp  0.hinhvuonglonnhat.cpp  0.luffythamban.cpp  0.luffyvauocso.cpp  0.nutxanhdo.cpp  0.sd.pie.cpp  0.sm.balancedcoursesassignment.cpp  0.sohoanhao.cpp  0.superthieuthan.cpp  0.timhinhchunhatcodientichlonnhi.cpp  0.tinhtongdayfibonacci.cpp  0.toadocua1diem.cpp  0.toantu.cpp  0.tongdongian.cpp  0.tuoitrongngay.cpp  5.chiateam.cpp  5.chonteam.cpp  CMakeLists.txt  TuAnhswonderfulnumbers.cpp  __gcd.cpp  __gcd.h  adn.cpp  almostfibonacci.cpp  bai1.cpp  bai2.cpp  baitoancaitui.cpp  baitoandoitien.cpp  baitoantrendayso.c  baitoantrendayso.cpp  bamso.cpp  bantre.cpp  banve.cpp  bienkiemsoat.c  bieuthuchautoBaLan.cpp  bitmatbatde.cpp  (+303 more)
Python/: .gitignore  0.banhchung.py  0.bongchuyen.py  0.cacsochan.py  0.conghaiso.py  0.danhsotrangbangsolama.py  0.duongvatrungbinh.py  0.inradodaicacso0liennhaudainhat.py  0.kiemtraABcocattruchoanhvatructungkhong.py  0.luongvathuong.py  0.matkhaucodinh.py  0.mavungdienthoai.py  0.ngaytieptheo.py  0.ocamdien.py  0.quatet.py  0.se.fibonacciwords.py  0.sole.py  0.solonnhat.py  0.soogiua.py  0.sukhacbiet.py  0.t.congthuccuabhaskara.py  0.t2r2.tongcacsolelientiep.py  0.tangluong.py  0.timgiatrilonnhatvatinhtong.py  0.tinhchuki3n+1.py  0.tuoicuacaccon.py  3goikeo.py  3songuyen.py  4so.py  5.khopanh.py  5.pum.py  5.t2r2.cancua10.py  LTOL.py  SangEratosthenes.py  Tic-Tac-Toe.py  bachusotancungcualuythua.py  banhchung.py  banhdanem.py  banphimcuarambo.py  benuoc.py  (+206 more)
Rust/: .gitignore  Cargo.toml
Rust/src/: 0.ngamsao.rs  1^m+2^m+...+n^m.rs  baitay.rs  baitoandoitien-bande.rs  bangso.rs  banlangxaxoi.rs  biendoixau.rs  bieuthuchautoBaLan.rs  (+41 more)
untitled/: CMakeLists.txt  library.cpp  library.h
untitled1/: CMakeLists.txt
(+41 files in other folders)
