cmake_minimum_required(VERSION 3.26)
project(Cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Cpp
        0.boisocua13.cpp
        0.ghepdoi.cpp
        0.luffythamban.cpp
        0.sohoanhao.cpp
        5.chiateam.cpp
        almostfibonacci.cpp
        baitoantrendayso.c
        bamso.cpp
        bantre.cpp
        banve.cpp
        bienkiemsoat.c
        bieuthuchautoBaLan.cpp
        bitmatbatde.cpp
        bobacapsonhan.cpp
        bobapytago.cpp
        bobatongchan.cpp
        boctrung.cpp
        boisodacbiet.cpp
        canbi.c
        canhcuathanki.cpp
        cauphuonghinhtron.c
        caychiadoi.c
        chanbo.cpp
        chanvoile.cpp
        chiemlanhtho.c
        choida3.cpp
        chuki3n+1.cpp
        chuso6va8.cpp
        chusonguyentov01.cpp
        covid19.cpp
        danhsachsinhviende1.cpp
        danhsachsinhviende2.cpp
        danhuoclongnhau.cpp
        datcohieu.c
        dayconbitonicdainhat.cpp
        daycondondieutangdainhat.cpp
        dayconlientuckhacbiet.cpp
        dayconlientucotongdainhat.cpp
        daysochiadu.cpp
        dayuoclongnhau.cpp
        demcachtachxauchiahetcho9.cpp
        demcactapcon.cpp
        demcapcotonggioihan.cpp
        demchuottui.cpp
        demcobaonhieuphantutrongdayvakiemtraday.cpp
        demkytu.cpp
        demsohinhchunhat.cpp
        demsotamgiac.cpp
        demsouoc.cpp
        demsouoccuangiaithua.c
        demsouoccuangiaithua.cpp
        demsoxaunhiphankhongchua101.cpp
        demsoxaunhiphanmachuso0khongithonchuso1.cpp
        diem-goc-duongtron.cpp
        dientichduoi.c
        dientichhinhbinhhanh.cpp
        dieukiencuahoanvi.cpp
        dinhlypasch.c
        dinhthuc.cpp
        ditrenduongcheo.c
        doanconcotongbangnhau.cpp
        doiquanvodich.c
        doitiennhanh.cpp
        dongxu.cpp
        duoihoc.cpp
        duongdiitchiphinhattrongbaimoiduongvekhong.cpp
        duongdingannhat-thuattoanfloyd.c
        easyproblem.cpp
        echnhay.cpp
        gapgiayngangdoc.c
        giaisogamesudoku.cpp
        giatrixorlonnhat.c
        gomnhom.cpp
        grenais.c
        helloworld.c
        hephuongtrinh.c
        hinhchunhatlonnhat.cpp
        hoandoiphantuhaiday.cpp
        hotenthanhtenho.c
        init.cpp
        khiemtapxepvong.cpp
        khoiphuccapsocong.cpp
        khopanh.cpp
        khuyenmai.c
        kiemtrangoacdung.cpp
        kiemtrasoarmstrong.c
        lailalatcacmatcuadongxu.c
        lailasaikhac.cpp
        lailatinhtohopchapkcuan.cpp
        lailatrinhtham.cpp
        latbangvuong.c
        latbittrongkhoang.cpp
        latcacmatcuadongxu.c
        latodoi.cpp
        levoichan.cpp
        lietkenhungsodiduoctrongbaimoiconduongvekhong.cpp
        lifeinanarray.cpp
        lop.cpp
        luythua.c
        luythuavaboiso.cpp
        mahoachuithe.cpp
        mangsapxep.cpp
        ngoidenthanthanh.cpp
        nhamaysanxuatgiay.cpp
        nhanhaisolon.cpp
        nhanmatran.cpp
        nhapmonBFS.cpp
        nhomban.cpp
        nqsondanhbai3.c
        nqsonluythua.cpp
        nqsonphatkeo.cpp
        nqsonsum2.cpp
        "nqsontinhtong(nqsonsum2).cpp"
        "nqsonuocso(1).cpp"
        "nqsonuocso(2).cpp"
        olpdoitien.cpp
        phandoancotongbangnhau.cpp
        phanloaicacfdecachlycovid-19.cpp
        phanloaitamgiac.cpp
        phannguyenvaphandu.cpp
        phantichrathuasonguyento.cpp
        phantichsothanhtongmotdaykhonggiamcacsonguyenduong.cpp
        phantudautiennhohon.cpp
        phantunhohonlonnhatdungtruoc.cpp
        phepbiendoicapdoilienke.c
        pie.cpp
        quantuongthuvi.cpp
        quyluatbangso.c
        rutgontaphopsonguyen.cpp
        saikhac.cpp
        sapxepbalo.cpp
        sapxepdongian.cpp
        sieugiaithua.cpp
        sieusomu.c
        socuoicung.cpp
        sodacbiet.c
        sodayngoachople.cpp
        sodoixungchan2.cpp
        sofibonaccilon.cpp
        sogannhiphan.cpp
        sokhoidau.cpp
        sonhungsonguyentocungnhau.cpp
        sothuk.cpp
        superthieuthan.c
        "svmc 2017 code1 - secret Code.cpp"
        tableofnumbers.cpp
        tamgiacpascal.c
        tanghoa2011.cpp
        tanghoacrush.c
        thangmay.cpp
        thayxau.cpp
        thuasodacbiet.cpp
        thuattoanmahoahuffman.cpp
        tichvatong.cpp
        timdayconlientuccotongchotruoc.cpp
        timhaisocotichlonnhat.cpp
        timso.cpp
        timsonguyento.cpp
        timx.c
        tinhgandungtichphan.c
        tinhtohopchapkcuan.cpp
        tinhtonga^n+b^n.cpp
        tong3songuyen.cpp
        tongdacbiet.cpp
        tongdayfibonacci.cpp
        tongtatcacacuoclelonnhat.c
        tongtrenduongcheo.cpp
        top3.c
        trinhtham.cpp
        trituyetdoilonnnhat.cpp
        trogiupcupid.cpp
        trungbinhcong.cpp
        trungvicuakphantu.cpp
        truotbang.cpp
        truotmon.cpp
        truyvanmaxcuadoanconlientiep.cpp
        TuAnhswonderfulnumbers.cpp
        uocsophongthuy.c
        vandemodulo.cpp
        vietlien.cpp
        vietlot.c
        vuontoimattrang.c
        xaudoixungdainhat.cpp
        xaydungdanhba.cpp
        xaythap.c
        xaythapchanle.c
        xepmanh.cpp
        0.sohoanhao.cpp
        gapgiayngangdoc.c
        phepbiendoicapdoilienke.c
        main.cpp
        dibuon.cpp
        xephang.cpp
        buonduale.cpp
)
